<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
       <artifactId>lutece-global-pom</artifactId>
       <groupId>fr.paris.lutece.tools</groupId>
       <version>4.0.3</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.paris.lutece.plugins</groupId>
   <artifactId>plugin-appointment</artifactId>
   <packaging>lutece-plugin</packaging>
   <version>2.0.0-SNAPSHOT</version>
   <name>Lutece appointment plugin</name>
   <repositories>
       <repository>
           <id>lutece</id>
           <name>luteceRepository</name>
           <url>http://dev.lutece.paris.fr/maven_repository</url>
           <layout>default</layout>
       </repository>
   </repositories>
   <dependencies>
      <dependency>
         <groupId>fr.paris.lutece</groupId>
         <artifactId>lutece-core</artifactId>
         <version>6.0.0-SNAPSHOT</version>
         <type>lutece-core</type>
      </dependency>
      <dependency>
         <groupId>fr.paris.lutece.plugins</groupId>
         <artifactId>plugin-genericattributes</artifactId>
         <version>[1.1.2-SNAPSHOT,)</version>
         <type>lutece-plugin</type>
      </dependency>
      <dependency>
         <groupId>fr.paris.lutece.plugins</groupId>
         <artifactId>plugin-workflow</artifactId>
         <version>[4.2.3,)</version>
         <type>lutece-plugin</type>
      </dependency>
   </dependencies>
   <properties>
      <componentName>appointment</componentName>
      <jiraProjectName>RENDEZVOUS</jiraProjectName>
      <jiraComponentId>12273</jiraComponentId>        
   </properties>
   <build>
      <plugins>
	     <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-compiler-plugin</artifactId>
	        <version>3.5.1</version>
	        <configuration>
	           <source>1.8</source>
	           <target>1.8</target>
            </configuration>
	     </plugin>
      </plugins>
   </build>    
   <scm>
      <connection>scm:git:https://github.com/lutece-secteur-public/gru-plugin-appointment.git</connection>
      <developerConnection>scm:git:https://github.com/lutece-secteur-public/gru-plugin-appointment.git</developerConnection>
      <url>https://github.com/lutece-secteur-public/gru-plugin-appointment.git</url>
      <tag>gru-plugin-appointment-1.1.2-RC-03</tag>
   </scm> 
</project>